Update index.html - title change

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Modern Night Mode Timer</title>
+  <title>Timer</title>
   <style>
     * { box-sizing: border-box; margin: 0; padding: 0; }
     body {
